add two new recipes with pictures and update home

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 
   <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/pizza.html">Pizza</a>
+    <ul>
+      <li><a href="./recipes/pizza.html">Pizza</a></li>
+      <li><a href="./recipes/eggsandbacon.html">Eggs & bacon</a></li>
+      <li><a href="./recipes/Pasta carbonara.html">Pasta carbonara</a></li>
+    </ul>
   </body>
 </html>
