--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -25,5 +25,32 @@
       <li>peppers</li>
       <li>fresh basil</li>
     </ul>
+    <h2>Steps</h2>
+    <ol>
+      <li>preheat the oven to 220 celsius</li>
+      <li>
+        Sprinkle a pizza paddle (you can use metal or wooden) lightly with corn
+        meal, and roll out the pizza dough into a large circle about 1/4 to 1/2
+        inch thick (depending on your preferences).
+      </li>
+      <li>
+        Spread the prepared pizza sauce over the top of the crust. Then evenly
+        sprinkle it with mozzarella cheese. Add salami slices evenly over the
+        cheese.
+      </li>
+      <li>
+        Then spread peppers and red onion over the top of the salami if desired.
+        Sprinkle grated parmigiano and fresh mozzarella balls over the top.
+      </li>
+      <li>
+        Carefully transfer the pizza to the pizza stone and bake for 10-14
+        minutes, or until the cheese is evenly melted. (You can also bake it in
+        a pizza oven until golden, we love ours)
+      </li>
+      <li>
+        Garnish the pizza with parmesan, and fresh parsley or basil, and slice
+        it up and enjoy hot.
+      </li>
+    </ol>
   </body>
 </html>
