Add styles with css

--- a/index.html
+++ b/index.html
@@ -4,14 +4,20 @@
   <head>
     <meta charset="UTF-8" />
     <title>project:recipes</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
 
   <body>
-    <h1>Odin Recipes</h1>
+    <h1 class="headline preview">Odin Recipes</h1>
     <ul>
-      <li><a href="./recipes/pizza.html">Pizza</a></li>
+      <li class="headline"><a href="./recipes/pizza.html">Pizza</a></li>
       <li><a href="./recipes/eggsandbacon.html">Eggs & bacon</a></li>
       <li><a href="./recipes/Pasta carbonara.html">Pasta carbonara</a></li>
     </ul>
+    <p id="one">
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut iste nihil,
+      at veritatis rerum, modi accusantium provident qui dignissimos rem dolore
+      omnis, ex quidem ab quod maiores quam minus nesciunt?
+    </p>
   </body>
 </html>
