Add styles with seperate css file

--- a/recipes/eggsandbacon.html
+++ b/recipes/eggsandbacon.html
@@ -4,9 +4,17 @@
   <head>
     <meta charset="UTF-8" />
     <title>eggs & bacon</title>
+    <link rel="stylesheet" href="../styles.css" />
   </head>
 
   <body>
+    <nav>
+      <a href="../index.html">Home</a>
+      <a href="/recipes/pizza.html">Pizza salami</a>
+      <a href="/recipes/eggsandbacon.html">Eggs & bacon</a>
+      <a href="/recipes/Pasta carbonara.html">Pasta carbonara</a>
+    </nav>
+    <a href="../index.html">Home</a>
     <h1>Eggs & bacon</h1>
     <img src="../images/eggsandbacon.jpeg" alt="breakfast of champions" />
     <h2>Description</h2>
