--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -3,10 +3,18 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>project:recipes</title>
+    <title>Pizza</title>
+    <link rel="stylesheet" href="../styles.css" />
   </head>
 
   <body>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="./recipes/pizza.html">Pizza</a>
+      <a href="./recipes/eggsandbacon.html">Eggs & bacon</a>
+      <a href="./recipes/Pasta carbonara.html">Pasta carbonara</a>
+    </nav>
+    <a href="../index.html">Home</a>
     <h1>Pizza salami</h1>
     <img
       src="../images/pizza-salami_3f8199_lg.jpg"
