--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
   </head>
 
   <body>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="/recipes/pizza.html">Pizza</a>
+      <a href="/recipes/eggsandbacon.html">Eggs & bacon</a>
+      <a href="/recipes/Pasta carbonara.html">Pasta carbonara</a>
+    </nav>
     <h1 class="headline preview">Odin Recipes</h1>
     <ul>
       <li class="headline"><a href="./recipes/pizza.html">Pizza</a></li>
