--- a/recipes/Pasta carbonara.html
+++ b/recipes/Pasta carbonara.html
@@ -4,9 +4,17 @@
   <head>
     <meta charset="UTF-8" />
     <title>pasta carbonara</title>
+    <link rel="stylesheet" href="../styles.css" />
   </head>
 
   <body>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="./recipes/pizza.html">Pizza</a>
+      <a href="./recipes/eggsandbacon.html">Eggs & bacon</a>
+      <a href="./recipes/Pasta carbonara.html">Pasta carbonara</a>
+    </nav>
+    <a href="../index.html">Home</a>
     <h1>pasta carbonara</h1>
     <img src="../images/pasta carbonara.jpg" alt="a nice meal" />
     <h2>Description</h2>
